jupyter notebook recognizes us!

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "819fe0b4",
-   "metadata": {
-    "vscode": {
-     "languageId": "nushell"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -35,15 +31,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "simple_kernel",
-   "language": "simple_kernel",
-   "name": "simplekernel"
+   "display_name": "Nushell",
+   "language": "nushell",
+   "name": "nu"
   },
   "language_info": {
    "codemirror_mode": "",
    "file_extension": ".py",
    "mimetype": "",
-   "name": "simple_kernel",
+   "name": "nushell",
    "nbconvert_exporter": "",
    "pygments_lexer": "",
    "version": "1.0"
