--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -2,80 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "fb2910e8",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/json": {
-       "category": "core",
-       "command_type": "keyword",
-       "input_output": [
-        {
-         "input": "nothing",
-         "output": "nothing"
-        }
-       ],
-       "name": "alias",
-       "params": [
-        {
-         "description": "Name of the alias.",
-         "name": "name",
-         "required": true,
-         "type": "string"
-        },
-        {
-         "description": "Equals sign followed by value.",
-         "name": "initial_value",
-         "required": true,
-         "type": "\"=\" expression"
-        },
-        {
-         "description": "Display the help message for this command",
-         "name": "--help(-h)",
-         "required": false,
-         "type": "switch"
-        }
-       ],
-       "search_terms": "abbr, aka, fn, func, function",
-       "usage": "Alias a command (with optional flags) to a new name."
-      },
+      "application/json": "Welcome to Nushell.\n\nHere are some tips to help you get started.\n  * help -h or help help - show available `help` subcommands and examples\n  * help commands - list all available commands\n  * help <name> - display help about a particular command, alias, or module\n  * help --find <text to search> - search through all help commands table\n\nNushell works on the idea of a \"pipeline\". Pipelines are commands connected with the '|' character.\nEach stage in the pipeline works together to load, parse, and display information to you.\n\n[Examples]\n\nList the files in the current directory, sorted by size:\n    ls | sort-by size\n\nGet information about the current system:\n    sys | get host\n\nGet the processes on your system actively using CPU:\n    ps | where cpu > 0\n\nYou can also learn more at https://www.nushell.sh/book/",
       "text/markdown": [
-       "|name|category|command_type|usage|params|input_output|search_terms|\n",
-       "|-|-|-|-|-|-|-|\n",
-       "|alias|core|keyword|Alias a command (with optional flags) to a new name.|[{name: name, type: string, required: true, description: Name of the alias.}, {name: initial_value, type: \"=\" expression, required: true, description: Equals sign followed by value.}, {name: --help(-h), type: switch, required: false, description: Display the help message for this command}]|[{input: nothing, output: nothing}]|abbr, aka, fn, func, function|\n"
+       "Welcome to Nushell.\n",
+       "\n",
+       "Here are some tips to help you get started.\n",
+       "  * help -h or help help - show available `help` subcommands and examples\n",
+       "  * help commands - list all available commands\n",
+       "  * help <name> - display help about a particular command, alias, or module\n",
+       "  * help --find <text to search> - search through all help commands table\n",
+       "\n",
+       "Nushell works on the idea of a \"pipeline\". Pipelines are commands connected with the '|' character.\n",
+       "Each stage in the pipeline works together to load, parse, and display information to you.\n",
+       "\n",
+       "[Examples]\n",
+       "\n",
+       "List the files in the current directory, sorted by size:\n",
+       "    ls | sort-by size\n",
+       "\n",
+       "Get information about the current system:\n",
+       "    sys | get host\n",
+       "\n",
+       "Get the processes on your system actively using CPU:\n",
+       "    ps | where cpu > 0\n",
+       "\n",
+       "You can also learn more at https://www.nushell.sh/book/\n"
       ],
       "text/plain": [
-       "name: alias\r\n",
-       "category: core\r\n",
-       "command_type: keyword\r\n",
-       "usage: Alias a command (with optional flags) to a new name.\r\n",
-       "params: name: name, type: string, required: true, description: Name of the alias., name: initial_value, type: \"=\" expression, required: true, description: Equals sign followed by value., name: --help(-h), type: switch, required: false, description: Display the help message for this command\r\n",
-       "input_output: input: nothing, output: nothing\r\n",
-       "search_terms: abbr, aka, fn, func, function"
+       "Welcome to Nushell.\n",
+       "\n",
+       "Here are some tips to help you get started.\n",
+       "  * help -h or help help - show available `help` subcommands and examples\n",
+       "  * help commands - list all available commands\n",
+       "  * help <name> - display help about a particular command, alias, or module\n",
+       "  * help --find <text to search> - search through all help commands table\n",
+       "\n",
+       "Nushell works on the idea of a \"pipeline\". Pipelines are commands connected with the '|' character.\n",
+       "Each stage in the pipeline works together to load, parse, and display information to you.\n",
+       "\n",
+       "[Examples]\n",
+       "\n",
+       "List the files in the current directory, sorted by size:\n",
+       "    ls | sort-by size\n",
+       "\n",
+       "Get information about the current system:\n",
+       "    sys | get host\n",
+       "\n",
+       "Get the processes on your system actively using CPU:\n",
+       "    ps | where cpu > 0\n",
+       "\n",
+       "You can also learn more at https://www.nushell.sh/book/"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "help commands | first"
+    "help"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "819fe0b4",
+   "id": "ca821262",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/json": null,
-      "text/markdown": [],
-      "text/plain": []
+      "application/json": [
+       {
+        "modified": "2024-04-23 13:37:05.216601200 +02:00",
+        "name": "example.ipynb",
+        "size": 592,
+        "type": "file"
+       }
+      ],
+      "text/csv": [
+       "name,type,size,modified\n",
+       "example.ipynb,file,592 B,2024-04-23 13:37:05.216601200 +02:00\n"
+      ],
+      "text/markdown": [
+       "|name|type|size|modified|\n",
+       "|-|-|-|-|\n",
+       "|example.ipynb|file|592 B|Tue, 23 Apr 2024 13:37:05 +0200 (now)|\n"
+      ],
+      "text/plain": [
+       "name: example.ipynb, type: file, size: 592 B, modified: Tue, 23 Apr 2024 13:37:05 +0200 (now)"
+      ]
      },
      "execution_count": 2,
      "metadata": {},
@@ -83,40 +104,7 @@
     }
    ],
    "source": [
-    "let a = {a: 3}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bc9e0084",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "a": 3
-      },
-      "text/csv": [
-       "a\n",
-       "3\n"
-      ],
-      "text/markdown": [
-       "|a|\n",
-       "|-|\n",
-       "|3|"
-      ],
-      "text/plain": [
-       "a: 3"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "$a"
+    "ls"
    ]
   }
  ],
