--- a/examples/polars.ipynb
+++ b/examples/polars.ipynb
@@ -46,12 +46,12 @@
        "|-|-|-|-|\n",
        "|data\\Data7602DescendingYearOrder.csv|file|129.3 MiB|Wed, 5 Oct 2022 14:44:48 +0200 (2 years ago)|\n",
        "|data\\Metadata for Data7602DescendingYearOrder.xlsx|file|106.1 KiB|Thu, 20 Oct 2022 10:41:12 +0200 (2 years ago)|\n",
-       "|data\\nz-stats.zip|file|22.9 MiB|Wed, 15 May 2024 12:30:31 +0200 (3 days ago)|"
+       "|data\\nz-stats.zip|file|22.9 MiB|Wed, 15 May 2024 12:30:31 +0200 (3 months ago)|"
       ],
       "text/plain": [
        "name: data\\Data7602DescendingYearOrder.csv, type: file, size: 129.3 MiB, modified: Wed, 5 Oct 2022 14:44:48 +0200 (2 years ago)\r\n",
        "name: data\\Metadata for Data7602DescendingYearOrder.xlsx, type: file, size: 106.1 KiB, modified: Thu, 20 Oct 2022 10:41:12 +0200 (2 years ago)\r\n",
-       "name: data\\nz-stats.zip, type: file, size: 22.9 MiB, modified: Wed, 15 May 2024 12:30:31 +0200 (3 days ago)"
+       "name: data\\nz-stats.zip, type: file, size: 22.9 MiB, modified: Wed, 15 May 2024 12:30:31 +0200 (3 months ago)"
       ]
      },
      "execution_count": 2,
@@ -80,10 +80,10 @@
       "text/markdown": [
        "|key|created|columns|rows|type|estimated_size|span_contents|span_start|span_end|reference_count|\n",
        "|-|-|-|-|-|-|-|-|-|-|\n",
-       "|13673bdd-ea5e-4d11-89b1-b7fa2024e822|Sun, 19 May 2024 11:10:05 +0200 (now)|5|5985364|LazyFrame|194.0 MiB|polars open|137|148|1|\n"
+       "|169f1b80-0278-44d9-a686-bfe04998ece8|Thu, 15 Aug 2024 09:43:51 +0200 (now)|5|5985364|DataFrame|194.0 MiB|polars open|137|148|1|\n"
       ],
       "text/plain": [
-       "key: 13673bdd-ea5e-4d11-89b1-b7fa2024e822, created: Sun, 19 May 2024 11:10:05 +0200 (now), columns: 5, rows: 5985364, type: LazyFrame, estimated_size: 194.0 MiB, span_contents: polars open, span_start: 137, span_end: 148, reference_count: 1"
+       "key: 169f1b80-0278-44d9-a686-bfe04998ece8, created: Thu, 15 Aug 2024 09:43:51 +0200 (now), columns: 5, rows: 5985364, type: DataFrame, estimated_size: 194.0 MiB, span_contents: polars open, span_start: 137, span_end: 148, reference_count: 1"
       ]
      },
      "execution_count": 3,
@@ -183,20 +183,20 @@
     {
      "data": {
       "text/markdown": [
-       "|index|anzsic06|Area|year|geo_count|ec_count|\n",
-       "|-|-|-|-|-|-|\n",
-       "|0|F380|A120800|2011|3|0|\n",
-       "|1|E301|A337100|2001|3|6|\n",
-       "|2|Q879|T031|2014|36|410|\n",
-       "|3|F332|A136200|2005|0|0|\n",
-       "|4|I510|A206200|2005|0|0|"
+       "|anzsic06|Area|year|geo_count|ec_count|\n",
+       "|-|-|-|-|-|\n",
+       "|C16|A192800|2003|6|6|\n",
+       "|K622|A127500|2019|6|85|\n",
+       "|S955|A348200|2008|3|3|\n",
+       "|A051|A242700|2012|3|3|\n",
+       "|A|A169800|2009|84|75|"
       ],
       "text/plain": [
-       "index: 0, anzsic06: F380, Area: A120800, year: 2011, geo_count: 3, ec_count: 0\r\n",
-       "index: 1, anzsic06: E301, Area: A337100, year: 2001, geo_count: 3, ec_count: 6\r\n",
-       "index: 2, anzsic06: Q879, Area: T031, year: 2014, geo_count: 36, ec_count: 410\r\n",
-       "index: 3, anzsic06: F332, Area: A136200, year: 2005, geo_count: 0, ec_count: 0\r\n",
-       "index: 4, anzsic06: I510, Area: A206200, year: 2005, geo_count: 0, ec_count: 0"
+       "anzsic06: C16, Area: A192800, year: 2003, geo_count: 6, ec_count: 6\r\n",
+       "anzsic06: K622, Area: A127500, year: 2019, geo_count: 6, ec_count: 85\r\n",
+       "anzsic06: S955, Area: A348200, year: 2008, geo_count: 3, ec_count: 3\r\n",
+       "anzsic06: A051, Area: A242700, year: 2012, geo_count: 3, ec_count: 3\r\n",
+       "anzsic06: A, Area: A169800, year: 2009, geo_count: 84, ec_count: 75"
       ]
      },
      "execution_count": 5,
@@ -223,56 +223,56 @@
     {
      "data": {
       "text/markdown": [
-       "|index|year|geo_count|\n",
-       "|-|-|-|\n",
-       "|0|2000|9109038|\n",
-       "|1|2001|9036159|\n",
-       "|2|2002|9129798|\n",
-       "|3|2003|9459999|\n",
-       "|4|2004|10275174|\n",
-       "|5|2005|10726932|\n",
-       "|6|2006|11109930|\n",
-       "|7|2007|11351079|\n",
-       "|8|2008|11595300|\n",
-       "|9|2009|11680239|\n",
-       "|10|2010|11517015|\n",
-       "|11|2011|11526618|\n",
-       "|12|2012|11513895|\n",
-       "|13|2013|11590815|\n",
-       "|14|2014|12009198|\n",
-       "|15|2015|12310005|\n",
-       "|16|2016|12559281|\n",
-       "|17|2017|12904980|\n",
-       "|18|2018|13046571|\n",
-       "|19|2019|13325616|\n",
-       "|20|2020|13582815|\n",
-       "|21|2021|13682886|\n",
-       "|22|2022|14338263|"
+       "|year|geo_count|\n",
+       "|-|-|\n",
+       "|2000|9109038|\n",
+       "|2001|9036159|\n",
+       "|2002|9129798|\n",
+       "|2003|9459999|\n",
+       "|2004|10275174|\n",
+       "|2005|10726932|\n",
+       "|2006|11109930|\n",
+       "|2007|11351079|\n",
+       "|2008|11595300|\n",
+       "|2009|11680239|\n",
+       "|2010|11517015|\n",
+       "|2011|11526618|\n",
+       "|2012|11513895|\n",
+       "|2013|11590815|\n",
+       "|2014|12009198|\n",
+       "|2015|12310005|\n",
+       "|2016|12559281|\n",
+       "|2017|12904980|\n",
+       "|2018|13046571|\n",
+       "|2019|13325616|\n",
+       "|2020|13582815|\n",
+       "|2021|13682886|\n",
+       "|2022|14338263|"
       ],
       "text/plain": [
-       "index: 0, year: 2000, geo_count: 9109038\r\n",
-       "index: 1, year: 2001, geo_count: 9036159\r\n",
-       "index: 2, year: 2002, geo_count: 9129798\r\n",
-       "index: 3, year: 2003, geo_count: 9459999\r\n",
-       "index: 4, year: 2004, geo_count: 10275174\r\n",
-       "index: 5, year: 2005, geo_count: 10726932\r\n",
-       "index: 6, year: 2006, geo_count: 11109930\r\n",
-       "index: 7, year: 2007, geo_count: 11351079\r\n",
-       "index: 8, year: 2008, geo_count: 11595300\r\n",
-       "index: 9, year: 2009, geo_count: 11680239\r\n",
-       "index: 10, year: 2010, geo_count: 11517015\r\n",
-       "index: 11, year: 2011, geo_count: 11526618\r\n",
-       "index: 12, year: 2012, geo_count: 11513895\r\n",
-       "index: 13, year: 2013, geo_count: 11590815\r\n",
-       "index: 14, year: 2014, geo_count: 12009198\r\n",
-       "index: 15, year: 2015, geo_count: 12310005\r\n",
-       "index: 16, year: 2016, geo_count: 12559281\r\n",
-       "index: 17, year: 2017, geo_count: 12904980\r\n",
-       "index: 18, year: 2018, geo_count: 13046571\r\n",
-       "index: 19, year: 2019, geo_count: 13325616\r\n",
-       "index: 20, year: 2020, geo_count: 13582815\r\n",
-       "index: 21, year: 2021, geo_count: 13682886\r\n",
-       "index: 22, year: 2022, geo_count: 14338263"
+       "year: 2000, geo_count: 9109038\r\n",
+       "year: 2001, geo_count: 9036159\r\n",
+       "year: 2002, geo_count: 9129798\r\n",
+       "year: 2003, geo_count: 9459999\r\n",
+       "year: 2004, geo_count: 10275174\r\n",
+       "year: 2005, geo_count: 10726932\r\n",
+       "year: 2006, geo_count: 11109930\r\n",
+       "year: 2007, geo_count: 11351079\r\n",
+       "year: 2008, geo_count: 11595300\r\n",
+       "year: 2009, geo_count: 11680239\r\n",
+       "year: 2010, geo_count: 11517015\r\n",
+       "year: 2011, geo_count: 11526618\r\n",
+       "year: 2012, geo_count: 11513895\r\n",
+       "year: 2013, geo_count: 11590815\r\n",
+       "year: 2014, geo_count: 12009198\r\n",
+       "year: 2015, geo_count: 12310005\r\n",
+       "year: 2016, geo_count: 12559281\r\n",
+       "year: 2017, geo_count: 12904980\r\n",
+       "year: 2018, geo_count: 13046571\r\n",
+       "year: 2019, geo_count: 13325616\r\n",
+       "year: 2020, geo_count: 13582815\r\n",
+       "year: 2021, geo_count: 13682886\r\n",
+       "year: 2022, geo_count: 14338263"
       ]
      },
      "execution_count": 6,
@@ -300,7 +300,7 @@
    "file_extension": ".nu",
    "mimetype": "text/nu",
    "name": "nushell",
-   "version": "0.93.1"
+   "version": "0.96"
   }
  },
  "nbformat": 4,
