updated examples to represent correct version and mime type

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -58,9 +58,9 @@
   },
   "language_info": {
    "file_extension": ".nu",
-   "mimetype": "text/nu",
+   "mimetype": "text/x-nushell",
    "name": "nushell",
-   "version": "0.96"
+   "version": "0.98.0"
   }
  },
  "nbformat": 4,
