--- a/examples/polars.ipynb
+++ b/examples/polars.ipynb
@@ -46,12 +46,12 @@
        "|-|-|-|-|\n",
        "|data\\Data7602DescendingYearOrder.csv|file|129.3 MiB|Wed, 5 Oct 2022 14:44:48 +0200 (2 years ago)|\n",
        "|data\\Metadata for Data7602DescendingYearOrder.xlsx|file|106.1 KiB|Thu, 20 Oct 2022 10:41:12 +0200 (2 years ago)|\n",
-       "|data\\nz-stats.zip|file|22.9 MiB|Wed, 15 May 2024 12:30:31 +0200 (3 months ago)|"
+       "|data\\nz-stats.zip|file|22.9 MiB|Wed, 15 May 2024 12:30:31 +0200 (4 months ago)|"
       ],
       "text/plain": [
        "name: data\\Data7602DescendingYearOrder.csv, type: file, size: 129.3 MiB, modified: Wed, 5 Oct 2022 14:44:48 +0200 (2 years ago)\r\n",
        "name: data\\Metadata for Data7602DescendingYearOrder.xlsx, type: file, size: 106.1 KiB, modified: Thu, 20 Oct 2022 10:41:12 +0200 (2 years ago)\r\n",
-       "name: data\\nz-stats.zip, type: file, size: 22.9 MiB, modified: Wed, 15 May 2024 12:30:31 +0200 (3 months ago)"
+       "name: data\\nz-stats.zip, type: file, size: 22.9 MiB, modified: Wed, 15 May 2024 12:30:31 +0200 (4 months ago)"
       ]
      },
      "execution_count": 2,
@@ -80,10 +80,10 @@
       "text/markdown": [
        "|key|created|columns|rows|type|estimated_size|span_contents|span_start|span_end|reference_count|\n",
        "|-|-|-|-|-|-|-|-|-|-|\n",
-       "|40edc0b9-49ab-40ea-b91f-fef750070747|Sat, 24 Aug 2024 16:29:40 +0200 (now)|5|5985364|LazyFrame|194.0 MiB|polars open|137|148|1|\n"
+       "|208664bf-188b-4d93-9079-1eae3d7a6811|Fri, 27 Sep 2024 13:26:24 +0200 (now)|5|5985364|LazyFrame|194.0 MiB|polars open|6394|6405|1|\n"
       ],
       "text/plain": [
-       "key: 40edc0b9-49ab-40ea-b91f-fef750070747, created: Sat, 24 Aug 2024 16:29:40 +0200 (now), columns: 5, rows: 5985364, type: LazyFrame, estimated_size: 194.0 MiB, span_contents: polars open, span_start: 137, span_end: 148, reference_count: 1"
+       "key: 208664bf-188b-4d93-9079-1eae3d7a6811, created: Fri, 27 Sep 2024 13:26:24 +0200 (now), columns: 5, rows: 5985364, type: LazyFrame, estimated_size: 194.0 MiB, span_contents: polars open, span_start: 6394, span_end: 6405, reference_count: 1"
       ]
      },
      "execution_count": 3,
@@ -185,18 +185,18 @@
       "text/markdown": [
        "|anzsic06|Area|year|geo_count|ec_count|\n",
        "|-|-|-|-|-|\n",
-       "|H|A229400|2022|3|9|\n",
-       "|E301|A306700|2013|9|0|\n",
-       "|M691|A215400|2010|0|0|\n",
-       "|M697|A157100|2012|3|3|\n",
-       "|N73|A353400|2007|6|280|"
+       "|S942|A183400|2014|3|0|\n",
+       "|E322|A140700|2001|3|0|\n",
+       "|J59|R13|2007|57|270|\n",
+       "|C20|A346700|2014|0|6|\n",
+       "|E30|A255000|2002|0|18|"
       ],
       "text/plain": [
-       "anzsic06: H, Area: A229400, year: 2022, geo_count: 3, ec_count: 9\r\n",
-       "anzsic06: E301, Area: A306700, year: 2013, geo_count: 9, ec_count: 0\r\n",
-       "anzsic06: M691, Area: A215400, year: 2010, geo_count: 0, ec_count: 0\r\n",
-       "anzsic06: M697, Area: A157100, year: 2012, geo_count: 3, ec_count: 3\r\n",
-       "anzsic06: N73, Area: A353400, year: 2007, geo_count: 6, ec_count: 280"
+       "anzsic06: S942, Area: A183400, year: 2014, geo_count: 3, ec_count: 0\r\n",
+       "anzsic06: E322, Area: A140700, year: 2001, geo_count: 3, ec_count: 0\r\n",
+       "anzsic06: J59, Area: R13, year: 2007, geo_count: 57, ec_count: 270\r\n",
+       "anzsic06: C20, Area: A346700, year: 2014, geo_count: 0, ec_count: 6\r\n",
+       "anzsic06: E30, Area: A255000, year: 2002, geo_count: 0, ec_count: 18"
       ]
      },
      "execution_count": 5,
@@ -502,7 +502,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "series: series: x: 2000, y: 9109038, x: 2001, y: 9036159, x: 2002, y: 9129798, x: 2003, y: 9459999, x: 2004, y: 10275174, x: 2005, y: 10726932, x: 2006, y: 11109930, x: 2007, y: 11351079, x: 2008, y: 11595300, x: 2009, y: 11680239, x: 2010, y: 11517015, x: 2011, y: 11526618, x: 2012, y: 11513895, x: 2013, y: 11590815, x: 2014, y: 12009198, x: 2015, y: 12310005, x: 2016, y: 12559281, x: 2017, y: 12904980, x: 2018, y: 13046571, x: 2019, y: 13325616, x: 2020, y: 13582815, x: 2021, y: 13682886, x: 2022, y: 14338263, color: r: 30, g: 100, b: 20, a: 1, filled: true, stroke_width: 1, style: bar, horizontal: false\r\n",
+       "series: kind: bar, series: x: 2000, y: 9109038, x: 2001, y: 9036159, x: 2002, y: 9129798, x: 2003, y: 9459999, x: 2004, y: 10275174, x: 2005, y: 10726932, x: 2006, y: 11109930, x: 2007, y: 11351079, x: 2008, y: 11595300, x: 2009, y: 11680239, x: 2010, y: 11517015, x: 2011, y: 11526618, x: 2012, y: 11513895, x: 2013, y: 11590815, x: 2014, y: 12009198, x: 2015, y: 12310005, x: 2016, y: 12559281, x: 2017, y: 12904980, x: 2018, y: 13046571, x: 2019, y: 13325616, x: 2020, y: 13582815, x: 2021, y: 13682886, x: 2022, y: 14338263, color: r: 30, g: 100, b: 20, a: 1, filled: true, stroke_width: 1\r\n",
        "width: 1000\r\n",
        "height: 400\r\n",
        "background: \r\n",
