--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -20,7 +20,7 @@
        "     __  ,\r\n",
        " .--()°'.' You're running `nu-jupyter-kernel`,\r\n",
        "'|, . ,'   based on the `nu` language,\r\n",
-       " !_-(_\\    where all data is structured!"
+       " !_-(_\\    where all data is structured!\r\n"
       ]
      },
      "metadata": {},
@@ -33,7 +33,7 @@
        "<div style=\"background-color:white;color:black;\">Welcome to Nushell.</div>"
       ],
       "text/markdown": [
-       "Welcome to Nushell.\n"
+       "Welcome to Nushell."
       ],
       "text/plain": [
        "Welcome to Nushell."
@@ -60,7 +60,7 @@
    "file_extension": ".nu",
    "mimetype": "text/x-nushell",
    "name": "nushell",
-   "version": "0.98.0"
+   "version": "0.105.1"
   }
  },
  "nbformat": 4,
